--- a/.gitmodules
+++ b/.gitmodules
@@ -13,21 +13,24 @@
 [submodule "bundle/sensible"]
     path = bundle/sensible
     url = https://github.com/tpope/vim-sensible.git
-[submodule "bundle/command-t"]
-    path = bundle/command-t
-    url = git://git.wincent.com/command-t.git
 [submodule "bundle/snipmate"]
     path = bundle/snipmate
     url = https://github.com/msanders/snipmate.vim.git
 [submodule "bundle/ack"]
     path = bundle/ack
     url = https://github.com/mileszs/ack.vim.git
-[submodule "bundle/syntastic"]
-    path = bundle/syntastic
-    url = https://github.com/scrooloose/syntastic.git
-[submodule "bundle/pydoc"]
-    path = bundle/pydoc
-    url = https://github.com/fs111/pydoc.vim.git
+[submodule "bundle/taskpaper"]
+    path = bundle/taskpaper
+    url = git://github.com/davidoc/taskpaper.vim.git
 [submodule "bundle/todo.txt"]
     path = bundle/todo.txt
     url = git://github.com/freitass/todo.txt-vim.git
+[submodule "bundle/ctrlp"]
+    path = bundle/ctrlp
+    url = https://github.com/kien/ctrlp.vim
+[submodule "bundle/jedi-vim"]
+    path = bundle/jedi-vim
+    url = https://github.com/davidhalter/jedi-vim
+[submodule "bundle/syntastic"]
+    path = bundle/syntastic
+    url = https://github.com/scrooloose/syntastic.git
