normalized spectrwm config

--- a/configs/spectrwm/spectrwm.conf
+++ b/configs/spectrwm/spectrwm.conf
@@ -1,13 +1,15 @@
-#    eeeee eeee eeeee  eeeee eeeee e   e  e eeeeeee 
-#    8   " 8  8 8   8  8  88   8   8   8  8 8  8  8 
-#    8eeee 8e   8eee8e 8   8   8e  8e  8  8 8e 8  8 
-#       88 88   88   8 8   8   88  88  8  8 88 8  8 
-#    8ee88 88e8 88   8 8eee8   88  88ee8ee8 88 8  8 
+#    eeeee eeee eeeee  eeeee eeeee e   e  e eeeeeee
+#    8   " 8  8 8   8  8  88   8   8   8  8 8  8  8
+#    8eeee 8e   8eee8e 8   8   8e  8e  8  8 8e 8  8
+#       88 88   88   8 8   8   88  88  8  8 88 8  8
+#    8ee88 88e8 88   8 8eee8   88  88ee8ee8 88 8  8
 
 # PLEASE READ THE MAN PAGE BEFORE EDITING THIS FILE!
 # http://www.peereboom.us/scrotwm/html/man.html
 
-# scrotwm has still (2012-08-26) this ugly bug, so I may come back later: 
+# default keybindings are in /usr/share/doc/spectrwm/examples/spectrwm_us.conf
+
+# scrotwm has still (2012-08-26) this ugly bug, so I may come back later:
 # - https://opensource.conformal.com/fluxbb/viewtopic.php?id=6
 # - https://opensource.conformal.com/flyspray/index.php?do=details&task_id=33&project=8
 # note: but it seems that it works for terminator
@@ -47,17 +49,16 @@ spawn_position      = next
 
 ## bindings for launching programs
 #program[lock]       = xscreensaver-command -lock
-program[lock]       = gnome-screensaver-command --lock
+#program[lock]       = gnome-screensaver-command --lock
+program[lock]       = slock
 #bind[lock]          = Mod+Shift+Delete # (default)
 #program[menu]       = dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
 program[menu]       = .config/spectrwm/dmenu-bind.sh
-bind[menu]          = Mod+p
-program[console]    = sakura
-bind[console]       = Mod+t
+bind[menu]          = Mod+r
+program[console]    = x-terminal-emulator
+bind[console]       = Mod+Return
 program[browser]    = firefox
 bind[browser]       = Mod+b
-program[dict]       = ding
-bind[dict]          = Mod+d
 program[editor]     = gvim
 bind[editor]        = Mod+e
 program[screenshot_all] =   .config/spectrwm/screenshot.sh full
@@ -86,9 +87,10 @@ program[audioplay]  = mpc toggle
 bind[audioplay]     = Mod+Insert
 
 ## window manager actions
-bind[float_toggle]  = Mod+f
-bind[name_workspace]  = Mod+n
-bind[search_workspace]  = Mod+g
+bind[swap_main] = Mod+Shift+Return
+bind[name_workspace] = Mod+n
+bind[flip_layout]   = MOD+Shift+space
+bind[stack_reset]   = MOD+Shift+backslash
 
 bind[focus_next]    = Mod+Right
 bind[focus_next]    = Mod+Down
@@ -113,9 +115,9 @@ dialog_ratio        = 0.6
 # region = screen[1]:1920x1056+0+24
 
 ## Launch applications in a workspace of choice
-autorun            = ws[1]:sakura
-autorun            = ws[9]:sakura -e mutt -F ~/mail/muttrc-freenet
-autorun            = ws[10]:sakura -e ncmpcpp
+#autorun            = ws[1]:sakura
+#autorun            = ws[9]:sakura -e mutt -F ~/mail/muttrc-freenet
+#autorun            = ws[10]:sakura -e ncmpcpp
 
 ## workspace layout
 # layout            = ws[1]:5:0:0:0:vertical
@@ -135,8 +137,8 @@ autorun            = ws[10]:sakura -e ncmpcpp
 #quirk[Firefox-bin:firefox-bin]             = TRANSSZ
 quirk[Firefox:Dialog]                       = FLOAT
 quirk[Gimp:gimp]                            = NONE
+quirk[trayer:panel]                         = FLOAT + ANYWHERE
 #quirk[XTerm:xfce4-terminal]                = XTERM_FONTADJ
-quirk[trayer:panel]                        = FLOAT + ANYWHERE
 #quirk[stalonetray:stalonetray]             =  ANYWHERE
 #quirk[xine:Xine Window]                    = FLOAT + ANYWHERE
 #quirk[Xitk:Xitk Combo]                     = FLOAT + ANYWHERE
