trayer should not be focused

--- a/configs/spectrwm/spectrwm.conf
+++ b/configs/spectrwm/spectrwm.conf
@@ -137,7 +137,7 @@ dialog_ratio        = 0.6
 #quirk[Firefox-bin:firefox-bin]             = TRANSSZ
 quirk[Firefox:Dialog]                       = FLOAT
 quirk[Gimp:gimp]                            = NONE
-quirk[trayer:panel]                         = FLOAT + ANYWHERE
+quirk[trayer:panel]                         = FLOAT + ANYWHERE + NOFOCUSCYCLE
 #quirk[XTerm:xfce4-terminal]                = XTERM_FONTADJ
 #quirk[stalonetray:stalonetray]             =  ANYWHERE
 #quirk[xine:Xine Window]                    = FLOAT + ANYWHERE
