changed colors for dmenu

--- a/configs/spectrwm/spectrwm.conf
+++ b/configs/spectrwm/spectrwm.conf
@@ -52,8 +52,7 @@ spawn_position      = next
 #program[lock]       = gnome-screensaver-command --lock
 program[lock]       = slock
 #bind[lock]          = Mod+Shift+Delete # (default)
-#program[menu]       = dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
-program[menu]       = .config/spectrwm/dmenu-bind.sh
+program[menu]       = /usr/bin/dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_font_color -sf $bar_color
 bind[menu]          = Mod+r
 program[console]    = x-terminal-emulator
 bind[console]       = Mod+Return
