--- a/configs/spectrwm/spectrwm.conf
+++ b/configs/spectrwm/spectrwm.conf
@@ -65,6 +65,8 @@ program[screenshot_all] =   .config/spectrwm/screenshot.sh full
 program[screenshot_wind] =  .config/spectrwm/screenshot.sh window
 # bind[screenshot_wind]  =   Mod+Shift+s # (default)
 
+bind[]              = Mod+Button1
+
 ## XF86 multimedia keys
 #bind[audiomute]     = XF86AudioMute
 #bind[audioraise]    = XF86AudioRaiseVolume
