--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "awesome/themes"]
-	path = awesome/themes
+	path = config/awesome/themes
 	url = https://github.com/serialoverflow/awesome-themes.git
 [submodule "awesome/lain"]
-	path = awesome/lain
+	path = config/awesome/lain
 	url = https://github.com/lcpz/lain.git
 [submodule "awesome/freedesktop"]
-	path = awesome/freedesktop
+	path = config/awesome/freedesktop
 	url = https://github.com/lcpz/awesome-freedesktop.git
